--- a/src/styles.css
+++ b/src/styles.css
@@ -185,8 +185,12 @@ img {
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  text-align: center;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -204,4 +208,10 @@ img {
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
+}
+
+.Loader {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
